--- a/deployment.yaml
+++ b/deployment.yaml
@@ -51,7 +51,7 @@ metadata:
     allow.http: "false"
 spec:
   rules:
-  - host: go.rancher.dev-ops-ninja.com
+  - host: go.20.185.229.166
     http:
       paths:
         - path: /
